# stellar-album-2026

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  bootstrap.sh
.impeccable/: design.json
contracts/album/: Cargo.toml
contracts/album/src/: lib.rs  test.rs
contracts/coin/: Cargo.toml
contracts/coin/src/: lib.rs  test.rs
contracts/coin/test_snapshots/test/: admin_can_repoint_minter.1.json  mint_increases_balance_and_supply.1.json  mint_succeeds_with_minter_auth.1.json  mint_without_minter_auth_panics.1.json  transfer_moves_balance.1.json
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
docs/: architecture.md  bootstrap-and-deploy.md  decisions.md  economy-and-rarity.md  frontend-and-testnet.md  fungibility-spectrum.md  glossary.md  implementation-plan.md
docs/curriculum/: README.md  class-1-coin-faucet.md  class-2-sticker.md  class-3-pack-album.md  class-4-store-escrow.md
frontend/: .env.local.example  README.md  index.html  package-lock.json  package.json
frontend/scripts/: bindings.sh
frontend/src/: App.tsx  index.css  store.tsx
frontend/src/components/: Confetti.tsx  Dialog.tsx  PackArt.tsx  PackReveal.tsx  Sticker.tsx  ui.tsx
frontend/src/lib/: catalog.ts  clients.ts  friendbot.ts  network.ts  wallet.ts
frontend/src/pages/: Album.tsx  Collection.tsx  Shop.tsx  Trade.tsx
tests/: Cargo.toml
tests/src/: class_3.rs  class_4.rs  lib.rs
