[workspace]
resolver = "2"
members = ["contracts/*", "tests"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/stellar/stellar-album"

[workspace.dependencies]
soroban-sdk = "26.1.0"
# OpenZeppelin Soroban contract libraries (released in lockstep at 0.7.2).
#   - stellar-tokens → fungible Base for Coin (Phase 1); non-fungible for Album (Phase 6)
# Trait default bodies are exported via `#[contractimpl(contracttrait)]` (soroban-sdk 26),
# so no extra default-impl macro crate is needed.
# Sticker is a hand-rolled multi-token (no OZ equivalent — see docs/decisions.md D8).
stellar-tokens = "0.7.2"

# Tuned for small, safe Soroban wasm. overflow-checks ON on purpose: arithmetic
# bugs in token math should trap, not wrap.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
